syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PNDRequest {
    int32 number = 1;
}

message PNDResponse {
    int32 prime = 1;
}

message AvgRequest {
    int32 number = 1;
}

message AvgResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number = 1; 
}

message FindMaximumResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PND(PNDRequest) returns (stream PNDResponse) {};
    rpc Avg(stream AvgRequest) returns (AvgResponse) {}; 
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // This RPC will throw an exception if the sent number is negative
    // Error sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}